--- a/p2.md
+++ b/p2.md
@@ -79,5 +79,5 @@ We used PowerPoint to create our storyboard and subsequent low-fidelity prototyp
 
 Initially we wanted a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. PowerPoint also allowed us to easily add animations and transitions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. We ran into a few issues along the way with playing the slideshow on mobile device, attempting to add a recorded video, and bugs with transitions/animations. While the PowerPoint made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aesthetic features.
 
-The task-centred system design walkthrough was a great way to closely examine every step of the user's interaction with the system and notice the issues early enough to fix them. The biggest struggle we faced doing the walkthrough was that we were already familiar with the system. We knew what every button did and what we needed to do without any instruction. This made it difficult at times to get into the mind of the user and figure out how they would feel at each step and imagine which parts might be confusing to them.
+The task-centred system design walkthrough was a great way to closely examine every step of the user's interaction with the system and notice the issues early enough to fix them. The biggest struggle we faced doing the walkthrough was that we were already familiar with the system. We knew what every button did and what we needed to do without any instruction. This made it difficult at times to get into the mind of the user to understand how they would feel at each step and imagine which parts might be confusing to them.
 
