--- a/p2.md
+++ b/p2.md
@@ -40,16 +40,16 @@ __Affinity Diagramming Session__: Each member cut their single sheet of paper to
 
 The following are closeup images of each group:
 
-[Main Menu](https://kowther.github.io/FieldGuide-481/affinitygroup1.jpg) This group contains sketches regarding what the welcome screen might look like, and any personalization options. These are the first screens a user would see when opening the app for the first time.
+- [Main Menu:](https://kowther.github.io/FieldGuide-481/affinitygroup1.jpg) This group contains sketches regarding what the welcome screen might look like, and any personalization options. These are the first screens a user would see when opening the app for the first time.
 
 
-[Identification techniques](https://kowther.github.io/FieldGuide-481/affinitygroup2.jpg) This group contains sketches regarding the way a user would input information about the wildflower they want to identify.
+- [Identification techniques:](https://kowther.github.io/FieldGuide-481/affinitygroup2.jpg) This group contains sketches regarding the way a user would input information about the wildflower they want to identify.
 
 
-[Log/history](https://kowther.github.io/FieldGuide-481/affinitygroup3.jpg) This group contains sketches regarding how a user's history of flowers found might be stored and displayed, as well as the history of their geographic area.
+- [Log/history:](https://kowther.github.io/FieldGuide-481/affinitygroup3.jpg) This group contains sketches regarding how a user's history of flowers found might be stored and displayed, as well as the history of their geographic area.
 
 
-[Info after identifying](https://kowther.github.io/FieldGuide-481/affinitygroup4.jpg) This group contains sketches regarding the way flower descriptons would be presented to the user after identifying a flower.
+- [Info after identifying:](https://kowther.github.io/FieldGuide-481/affinitygroup4.jpg) This group contains sketches regarding the way flower descriptons would be presented to the user after identifying a flower.
 
 
 After examining the sketches, we chose to elaborate on the three most promising ideas:
