--- a/p2.md
+++ b/p2.md
@@ -34,7 +34,7 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 * [Page 2](https://kowther.github.io/FieldGuide-481/brainstorm_02.jpg)
 * [Page 3](https://kowther.github.io/FieldGuide-481/brainstorm_03.jpg)
 
-__Affinity Diagramming Session__: Each member cut their single sheet of paper to separate the 7-8 ideas that they had sketched. All the sketches were of screens at various points throughout the user's interaction with the system. We organized the sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions after identification.
+__Affinity Diagramming Session__: Each member cut their single sheet of paper to separate the 7-8 ideas that they had sketched. All the sketches were of screens at various points throughout the user's interaction with the system. We organized the sketches into four groups: main menu, identification techniques, journal/log/history, and individual flower descriptions after identification.
 
 ![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
 
