Add link to App

--- a/p3.md
+++ b/p3.md
@@ -1,8 +1,8 @@
 # P3: Hi-fi Prototypes and Heuristic Evaluation
 
-## Link to Demo System
+## Link to Alberta Wildflowers - Wildflower Indentification App
 
-[Demo system](http://www.yahoo.com)
+[Alberta Wildflowers - Wildflower Identification](http://j9ji3r.axshare.com/#g=1&p=app_content)
 
 ## Highlight Walkthrough
 
