--- a/p3.md
+++ b/p3.md
@@ -31,5 +31,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Raw Heuristic Evaluation Notes
 
-![](http://lorempixel.com/550/450 "Raw heuristic evaluation notes")
-![](http://lorempixel.com/550/450 "More notes")
+![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Kowther.jpg "Raw heuristic evaluation notes")
+![](http://https://kowther.github.io/FieldGuide-481/ HeuristicAnalysis_Stephanie.jpg "More notes")
+![](http://https://kowther.github.io/FieldGuide-481/ HeuristicAnalysis_Lisa.JPEG "More notes")
+![](http://https://kowther.github.io/FieldGuide-481/ HeuristicAnalysis_Lisa2.JPEG "More notes")
