Minor Change to Raw Notes

--- a/p3.md
+++ b/p3.md
@@ -34,8 +34,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Kowther.jpg "Raw heuristic evaluation notes")
 
-![](https://kowther.github.io/FieldGuide-481/ HeuristicAnalysis_Stephanie.jpg "More notes")
+![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Stephanie.jpg "More notes")
 
-![](https://kowther.github.io/FieldGuide-481/ HeuristicAnalysis_Lisa.JPEG "More notes")
+![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa.JPEG "More notes")
 
-![](https://kowther.github.io/FieldGuide-481/ HeuristicAnalysis_Lisa2.JPEG "More notes")
+![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa2.JPEG "More notes")
