--- a/p3.md
+++ b/p3.md
@@ -36,6 +36,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Stephanie.jpg "More notes")
 
-![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa.JPEG "More notes")
+![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa.JPG "More notes")
 
-![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa2.JPEG "More notes")
+![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa2.JPG "More notes")
