--- a/p3.md
+++ b/p3.md
@@ -1,4 +1,5 @@
 
+
 # P3: Hi-fi Prototypes and Heuristic Evaluation
 
 ## Link to Alberta Wildflowers - Wildflower Indentification App
@@ -32,9 +33,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Raw Heuristic Evaluation Notes
 
+Kowther's Raw Heuristic Evaluation Notes
+
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Kowther.jpg "Raw heuristic evaluation notes")
 
+Stephanie's Raw Heuristic Evelaution Notes
+
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Stephanie.jpg "More notes")
+
+Lisa's Raw Heuristic Evaluation Notes
 
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa.JPG "More notes")
 
