Added gifs to Highlight Section

--- a/p3.md
+++ b/p3.md
@@ -7,6 +7,12 @@
 [Alberta Wildflowers - Wildflower Identification](http://j9ji3r.axshare.com/#g=1&p=app_content)
 
 ## Highlight Walkthrough
+![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by Characteristics")
+
+![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
+
+![](https://kowther.github.io/FieldGuide-481/learnmore.gif "Learn More")
+
 
 ![](http://lorempixel.com/550/450 "What's happening here")
 ![](http://lorempixel.com/550/450 "And then what's happening here")
