Heuristics discussion results

--- a/p3.md
+++ b/p3.md
@@ -52,3 +52,7 @@ Lisa's Raw Heuristic Evaluation Notes
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa.JPG "More notes")
 
 ![](https://kowther.github.io/FieldGuide-481/HeuristicAnalysis_Lisa2.JPG "More notes")
+
+Heuristic Evaluation Discussion Results
+
+![](https://kowther.github.io/FieldGuide-481/heuristics_discussion_resuts.png "Heuristic evaluation discussion results")
