added heuristics part

--- a/p3.md
+++ b/p3.md
@@ -27,11 +27,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Heuristic Evaluation Results
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+After discussing our individual heuristic evaluations, we came up with a set of 11 heuristics (shown in the table below) that were ranked by decreasing severity. Interestingly we found some patterns within the data. Level 1 dealt with minor recognition problems. Level 2 and 3 issues were mainly due to our system not matching the real world or visibility of system status. Level 4 issues were all due to a lack of user control and freedom, and had to do with not being able to go back from the current page or state. We felt that the user would not be able to overcome these issues if presented with them and thus an immediate fix was necessary. The rest of this section will focus on level 3-4 issues.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+What differentiated level 3 issues from level 2 were how much the user experience would be impacted by these problems. The results and my collection pages have scrollable content but do not have a scroll bar on the side to indicate that scrolling is possible. The way these pages are laid out it is not clear that there are more rows of images below. This was given a visibility of system status rating. It can be easily fixed by adding a scrollbar on the side. A match between system and real world issue we encountered was that the camera page did not have all the normal buttons and functionality that most mobile phone cameras have, such as a flash button. Adding the necessary camera functionalities would fix this issue. A good field guide would have images of each plant at different stages of growth. This way a user can identify a flower that is not in full bloom. Our wildflower database only shows images in full bloom. We rated this a match between system and real world issue. It can be fixed by adding information about plants when not in bloom.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+__ADD LISA’S INDEPTH LEVEL 4 HERE__
+
 
 ## Raw Heuristic Evaluation Notes
 
