--- a/p3.md
+++ b/p3.md
@@ -7,11 +7,18 @@
 [Alberta Wildflowers - Wildflower Identification](http://j9ji3r.axshare.com/#g=1&p=app_content)
 
 ## Highlight Walkthrough
-![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by Characteristics")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+
+![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by characteristics")
+
+Users have the option to identify wildflowers using either photo recognition or manually selecting characteristics of the wildflower.
+
+
+![](https://kowther.github.io/FieldGuide-481/learnmore.gif "Learn More")
 
 ![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
 
-![](https://kowther.github.io/FieldGuide-481/learnmore.gif "Learn More")
+Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where in the world it can be found. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's page in their journal.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
