Described some of the gifs

--- a/p3.md
+++ b/p3.md
@@ -4,7 +4,7 @@
 
 ## Link to Alberta Wildflowers - Wildflower Indentification App
 
-[Alberta Wildflowers - Wildflower Identification](http://j9ji3r.axshare.com/#g=1&p=app_content)
+[Alberta Wildflowers - Wildflower Identification](http://j9ji3r.axshare.com/#g=1&p=app_content) (Click "Device Frame" to view the app)
 
 ## Highlight Walkthrough
 ![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
@@ -19,6 +19,10 @@ Users have the option to identify wildflowers using either photo recognition or 
 ![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
 
 Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where in the world it can be found. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's page in their journal.
+
+![](http://lorempixel.com/550/450 "View My Collection")
+
+The user can also scroll through My Collection to view all of the wildflowers they have found and saved. They can click on the image of the wildflower to add/view additional images or personal notes, or share their find on social media.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
