--- a/p3.md
+++ b/p3.md
@@ -11,7 +11,7 @@
 
 ![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by characteristics")
 
-Users have the option to identify wildflowers using either photo recognition or manually selecting characteristics of the wildflower.
+Users have the option to identify wildflowers using either photo recognition or manually selecting characteristics of the wildflower. When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they take the photo and the system attempts to identify the wildflower. When identifying by manually choosing characteristics, the user touches a characteristics to apply the filter and hopefully narrow down the possibilities. At any time, they can click on the Results button at the bottom of the screen to see the currect matches from the filters applied so far.
 
 
 ![](https://kowther.github.io/FieldGuide-481/learnmore.gif "Learn More")
@@ -20,7 +20,7 @@ Users have the option to identify wildflowers using either photo recognition or 
 
 Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where in the world it can be found. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's page in their journal.
 
-![](http://lorempixel.com/550/450 "View My Collection")
+![](https://kowther.github.io/FieldGuide-481/collection.gif "View My Collection")
 
 The user can also scroll through My Collection to view all of the wildflowers they have found and saved. They can click on the image of the wildflower to add/view additional images or personal notes, or share their find on social media.
 
