--- a/p3.md
+++ b/p3.md
@@ -33,7 +33,14 @@ After discussing our individual heuristic evaluations, we came up with a set of 
 
 What differentiated level 3 issues from level 2 were how much the user experience would be impacted by these problems. The results and my collection pages have scrollable content but do not have a scroll bar on the side to indicate that scrolling is possible. The way these pages are laid out it is not clear that there are more rows of images below. This was given a visibility of system status rating. It can be easily fixed by adding a scrollbar on the side. A match between system and real world issue we encountered was that the camera page did not have all the normal buttons and functionality that most mobile phone cameras have, such as a flash button. Adding the necessary camera functionalities would fix this issue. A good field guide would have images of each plant at different stages of growth. This way a user can identify a flower that is not in full bloom. Our wildflower database only shows images in full bloom. We rated this a match between system and real world issue. It can be fixed by adding information about plants when not in bloom.
 
-__ADD LISA’S INDEPTH LEVEL 4 HERE__
+The level 4 issues we determined during our heuristic evaluation differed from the level 3 issues we identified above because we felt that these issues hindered the users ability to use the app properly and therefore would need to be fixed immediately in order to allow the user to have full functionality. All of these level 4 issues were associated with the user control and freedom heuristic. 
+
+The first level 4 issue we determined was on our description page contains drop down menus that when they are expanded they covered the back button so that the user no longer had access to that button in order to get out of the description page. The user would have had to click the home button and go back to the very beginning and start their identification all over again. To fix this issue we decided that adding scrolling to the page would allow for the user to access the information in the description, interesting facts and location sections while still being able to click the back button and continue their use of the app. 
+
+The second level 4 issue we determined was that when the user is adding a wildflower to their wildflower collection our app has a pop up window in order to set a primary image before the wildflower is added to the collection. Once this pop up has appeared there is no emergency exit for the user if by chance they clicked the add to my collection button by accident or no longer wanted to add it to their collection. The user is ultimately forced to add it to their collection. We decided that adding a back button to allow the user to exit the situation would be a good fix for this issue.
+
+The last level 4 issue we determined was on our identified page. If the user found an image that they thought was the flower and then determined it was not the correct wildflower then there was no way for the user to go back to the results page in order to pick a different flower. Again, this led to a state where the user would have to go back to the home page and start the identification process all over again.
+
 
 
 ## Raw Heuristic Evaluation Notes
