--- a/p3.md
+++ b/p3.md
@@ -7,19 +7,29 @@
 [Alberta Wildflowers - Wildflower Identification](http://j9ji3r.axshare.com/#g=1&p=app_content) (Click "Device Frame" to view the app)
 
 ## Highlight Walkthrough
+### Task 1: Identifying a wildflower
+Users have the option to identify wildflowers using either photo recognition or manually selecting characteristics of the wildflower.
+
+**Identifying by photo recognition**
+
 ![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+
+When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they take the photo and the system attempts to identify the wildflower.
+
+
+**Identifying by manual selection of characteristics**
 
 ![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by characteristics")
 
-Users have the option to identify wildflowers using either photo recognition or manually selecting characteristics of the wildflower. When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they take the photo and the system attempts to identify the wildflower. When identifying by manually choosing characteristics, the user touches a characteristics to apply the filter and hopefully narrow down the possibilities. At any time, they can click on the Results button at the bottom of the screen to see the currect matches from the filters applied so far.
+When identifying by manually choosing characteristics, the user touches a characteristics to apply the filter and hopefully narrow down the possible matches. At any time, they can click on the Results button at the bottom of the screen to see the matches from the filters applied so far.
 
-
+### Task 2: Learn more about a found wildflower, and add it to to My Collection
 
 ![](https://kowther.github.io/FieldGuide-481/learnmore.gif "Learn More")
 
 ![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
 
-Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where in the world it can be found. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's page in their journal.
+Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where it can be found globally. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's profile.
 
 
 
