Formatted tasks section

--- a/p3.md
+++ b/p3.md
@@ -14,7 +14,8 @@ Users have the option to identify wildflowers using either photo recognition or 
 
 ![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
 
-When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they take the photo and the system attempts to identify the wildflower.
+When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they press the white circle to take the photo, and the system attempts to identify the wildflower.
+
 
 
 **Identifying by manual selection of characteristics**
@@ -32,6 +33,7 @@ When identifying by manually choosing characteristics, the user touches a charac
 Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where it can be found globally. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's profile.
 
 
+### Task 3: View My Collection
 
 ![](https://kowther.github.io/FieldGuide-481/collection.gif "View My Collection")
 
