Added details to the task walkthroughs

--- a/p3.md
+++ b/p3.md
@@ -30,14 +30,14 @@ When identifying by manually choosing characteristics, the user touches a charac
 
 ![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
 
-Once the user has identified the wildflower, they are able to learn more about it. They can read a more detailed description of the flower, interesting facts, and where it can be found globally. Users also have the option to add the wildflower to My Collection, which acts as a journal of all the user's findings. They choose a primary photo for this wildflower's profile.
+Once the user has identified the wildflower, they are able to learn more about it and add it to My Collection, which acts as a journal of all the user's findings. From the "Identified" screen (visible above in the images from Task 1), then can touch "Learn More" to read a more detailed description of the flower, interesting facts, and where it can be found globally. Also from the "Identified" screen, they can touch My Collection, where they will choose a primary photo for the wildflower's profile in their journal.
 
 
 ### Task 3: View My Collection
 
 ![](https://kowther.github.io/FieldGuide-481/collection.gif "View My Collection")
 
-The user can also scroll through My Collection to view all of the wildflowers they have found and saved. They can click on the image of the wildflower to add/view additional images or personal notes, or share their find on social media.
+From the home screen, the user can access My Collection to view all of the wildflowers they have found and saved. They can touch the image of the wildflower to bring up the wildflower's "page" in the journal, where the user can add/view additional images or personal notes, or share their find on social media.
 
 ## Heuristic Evaluation Results
 
