--- a/p3.md
+++ b/p3.md
@@ -45,11 +45,7 @@ After discussing our individual heuristic evaluations, we came up with a set of 
 
 Although level 2 and 3 had the same types of issues, what differentiated level 3 issues from level 2 were how much the user experience would be impacted by these problems. The results and my collection pages have scrollable content but do not have a scroll bar on the side to indicate that scrolling is possible. The way these pages are laid out it is not clear that there are more rows of images below. This was given a visibility of system status rating. It can be easily fixed by adding a scrollbar on the side to let the user know that there is more content currently not visible. A match between system and real world issue we encountered was that the camera page did not have all the normal buttons and functionality that most mobile phone cameras have, such as a flash button. Adding the necessary camera functionalities would fix this issue. This would also allow the user to take better photos in less than ideal situations, increasing their chances of getting better results with photo recognition identification. A good field guide should have images of each plant at different stages of growth. This way a user can identify a flower that is not in full bloom. Our wildflower database only shows images in full bloom. We felt that this could cause frustration to the user. This was given a rating of match between system and real world. It can be fixed by adding information about plants when not in bloom in the description pages of each flower in our database. It would also be incorporated into the photo recognition and characteristics identification techniques.  
 
-The following level 4 issues were associated with the user control and freedom heuristic. The first issue we determined was that our description pages contain drop down menus that when they are expanded they covered the back button so that the user no longer had access to that button in order to get out of the description page. The user would have had to click the home button and go back to the very beginning and start their identification all over again. To fix this issue we decided that adding scrolling to the page would allow for the user to access the information in the description, interesting facts and location sections while still being able to click the back button and continue their use of the app.
-
-Another major issue was that when the user is adding a wildflower to their wildflower collection our app the user must set a primary image before the wildflower is added to the collection in a pop up window. Once in this state, there is no emergency exit for the user if by chance they clicked the ‘add to my collection’ button by accident or no longer wanted to add it to their collection. The user is ultimately forced to add it to their collection. We decided that adding a back button to allow the user to exit the situation would be a good fix for this issue.
-
-The last major issue we determined was on our identified page. Once a user has clicked on a wildflower in the results page there is no way for the user to go back in order to pick a different flower, if for example the user mistakenly click on a wrong flower. Again, this forces the user to go back to the home page and start the identification process all over again. This can be fixed by adding a back button to allow the user to go back to the results page. 
+The following level 4 issues were associated with the user control and freedom heuristic. The first issue we determined was that our description pages contain drop down menus that when they are expanded they covered the back button so that the user no longer had access to that button in order to get out of the description page. The user would have had to click the home button and go back to the very beginning and start their identification all over again. To fix this issue we decided that adding scrolling to the page would allow for the user to access the information in the description, interesting facts and location sections while still being able to click the back button and continue their use of the app. Another major issue was that when the user is adding a wildflower to their wildflower collection our app the user must set a primary image before the wildflower is added to the collection in a pop up window. Once in this state, there is no emergency exit for the user if by chance they clicked the ‘add to my collection’ button by accident or no longer wanted to add it to their collection. The user is ultimately forced to add it to their collection. We decided that adding a back button to allow the user to exit the situation would be a good fix for this issue. The last major issue we determined was on our identified page. Once a user has clicked on a wildflower in the results page there is no way for the user to go back in order to pick a different flower, if for example the user mistakenly click on a wrong flower. Again, this forces the user to go back to the home page and start the identification process all over again. This can be fixed by adding a back button to allow the user to go back to the results page. 
 
 Heuristic Evaluation Discussion Results
 
