Updated highlight walkthrough

--- a/p3.md
+++ b/p3.md
@@ -14,7 +14,7 @@ Users have the option to identify wildflowers using either photo recognition or 
 
 ![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
 
-When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they press the white circle to take the photo, and the system attempts to identify the wildflower.
+When identifying using photo recognition, the user positions the camera to get the wildflower in the view of the green box. Then they press the white circle to take the photo, and the system attempts to identify the wildflower. We modeled our camera screen after existing smartphone camera screens (round button in the bottom middle of the frame) so that it is familiar for the users to use.
 
 
 
@@ -22,7 +22,7 @@ When identifying using photo recognition, the user positions the camera to get t
 
 ![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by characteristics")
 
-When identifying by manually choosing characteristics, the user touches a characteristics to apply the filter and hopefully narrow down the possible matches. At any time, they can click on the Results button at the bottom of the screen to see the matches from the filters applied so far.
+When identifying by manually choosing characteristics, the user touches a characteristics to apply the filter and hopefully narrow down the possible matches. At any time, they can click on the Results button at the bottom of the screen to see the matches from the filters applied so far. One of our research findings was that people don't always know what words mean, or they don't know what words to use to describe something, so we chose to display the selectable filters as images with the small text underneath (as opposed to text alone) to make the characteristic easier to recognize. For example, most users probably wouldn't know what a "lanceolate" leaf shape looks like, but if they also have a picture of a lanceolate leaf shape they can determine if the leaf they are currently examining matches it.
 
 ### Task 2: Learn more about a found wildflower, and add it to to My Collection
 
@@ -30,14 +30,14 @@ When identifying by manually choosing characteristics, the user touches a charac
 
 ![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
 
-Once the user has identified the wildflower, they are able to learn more about it and add it to My Collection, which acts as a journal of all the user's findings. From the "Identified" screen (visible above in the images from Task 1), then can touch "Learn More" to read a more detailed description of the flower, interesting facts, and where it can be found globally. Also from the "Identified" screen, they can touch My Collection, where they will choose a primary photo for the wildflower's profile in their journal.
+Once the user has identified the wildflower, they are able to learn more about it and add it to My Collection, which acts as a journal of all the user's findings. From the "Identified" screen (visible above in the images from Task 1), then can touch "Learn More" to read a more detailed description of the flower, interesting facts, and where it can be found globally. We chose to use headers for each section with the info hidden in drop-down sections, as opposed to having all the information displayed by default. We made this decision because one of our user research fndings was that even though a user might want access to a lot of information, long walls of text can be overwhelming. This way, the user can view as much or as little information on their screen as they like. Also from the "Identified" screen, they can touch My Collection, where they will choose a primary photo for the wildflower's profile in their journal.
 
 
 ### Task 3: View My Collection
 
 ![](https://kowther.github.io/FieldGuide-481/collection.gif "View My Collection")
 
-From the home screen, the user can access My Collection to view all of the wildflowers they have found and saved. They can touch the image of the wildflower to bring up the wildflower's "page" in the journal, where the user can add/view additional images or personal notes, or share their find on social media.
+From the home screen, the user can access My Collection to view all of the wildflowers they have found and saved. They can touch the image of the wildflower to bring up the wildflower's "page" in the journal, where the user can add/view additional images that they've taken of the flower. They can also add/view personal notes, or share their find on social media. The user can sort their collection by name or date found, but we chose to make the images more prominent so that the wildflowers are easier for the user to see while scrolling through their collection. We chose to put the "share to social media" option here as a small icon, as opposed to on the "Identified" screen when the flower was first identified. We didn't want to include it as one of the main things a user could do from the "Identified" screen (alongside Learn More, Add to My Collection, etc.) because although we found that sharing to social media was a neat feature some users would enjoy, we also determined it might not be something that every user would use if they just wanted to use the system as a guide/journal).
 
 ## Heuristic Evaluation Results
 
