--- a/p3.md
+++ b/p3.md
@@ -30,7 +30,7 @@ When identifying by manually choosing characteristics, the user touches a charac
 
 ![](https://kowther.github.io/FieldGuide-481/addtocollection.gif "Add to Collection")
 
-Once the user has identified the wildflower, they are able to learn more about it and add it to My Collection, which acts as a journal of all the user's findings. From the "Identified" screen (visible above in the images from Task 1), then can touch "Learn More" to read a more detailed description of the flower, interesting facts, and where it can be found globally. We chose to use headers for each section with the info hidden in drop-down sections, as opposed to having all the information displayed by default. We made this decision because one of our user research fndings was that even though a user might want access to a lot of information, long walls of text can be overwhelming. This way, the user can view as much or as little information on their screen as they like. Also from the "Identified" screen, they can touch My Collection, where they will choose a primary photo for the wildflower's profile in their journal.
+Once the user has identified the wildflower, they are able to learn more about it and add it to My Collection, which acts as a journal of all the user's findings. From the "Identified" screen (visible above in the images from Task 1), then can touch "Learn More" to read a more detailed description of the flower, interesting facts, and where it can be found globally. We chose to use headers for each section with the information hidden in drop-down sections, as opposed to having all of it displayed by default. We made this decision because one of our user research findings was that even though a user might want access to a lot of information, long walls of text can be overwhelming. This way, the user can view as much or as little information on their screen as they like. Also from the "Identified" screen, they can touch My Collection, where they will choose a primary photo for the wildflower's profile in their journal.
 
 
 ### Task 3: View My Collection
