--- a/p3.md
+++ b/p3.md
@@ -22,7 +22,7 @@ When identifying using photo recognition, the user positions the camera to get t
 
 ![](https://kowther.github.io/FieldGuide-481/characteristics.gif "Identify by characteristics")
 
-When identifying by manually choosing characteristics, the user touches a characteristics to apply the filter and hopefully narrow down the possible matches. At any time, they can click on the Results button at the bottom of the screen to see the matches from the filters applied so far. One of our research findings was that people don't always know what words mean, or they don't know what words to use to describe something, so we chose to display the selectable filters as images with the small text underneath (as opposed to text alone) to make the characteristic easier to recognize. For example, most users probably wouldn't know what a "lanceolate" leaf shape looks like, but if they also have a picture of a lanceolate leaf shape they can determine if the leaf they are currently examining matches it.
+When identifying by manually choosing characteristics, the user touches a characteristic to apply the filter and hopefully narrow down the possible matches. At any time, they can click on the Results button at the bottom of the screen to see the matches from the filters applied so far. One of our research findings was that people don't always know what words mean, or they don't know what words to use to describe something, so we chose to display the selectable filters as images with the small text underneath (as opposed to text alone) to make the characteristic easier to recognize. For example, most users probably wouldn't know what a "lanceolate" leaf shape looks like, but if they also have a picture of a lanceolate leaf shape they can determine if the leaf they are currently examining matches it.
 
 ### Task 2: Learn more about a found wildflower, and add it to to My Collection
 
