Added some info to highlight walkthrough

--- a/p3.md
+++ b/p3.md
@@ -37,7 +37,7 @@ Once the user has identified the wildflower, they are able to learn more about i
 
 ![](https://kowther.github.io/FieldGuide-481/collection.gif "View My Collection")
 
-From the home screen, the user can access My Collection to view all of the wildflowers they have found and saved. They can touch the image of the wildflower to bring up the wildflower's "page" in the journal, where the user can add/view additional images that they've taken of the flower. They can also add/view personal notes, or share their find on social media. The user can sort their collection by name or date found, but we chose to make the images more prominent so that the wildflowers are easier for the user to see while scrolling through their collection. We chose to put the "share to social media" option here as a small icon, as opposed to on the "Identified" screen when the flower was first identified. We didn't want to include it as one of the main things a user could do from the "Identified" screen (alongside Learn More, Add to My Collection, etc.) because although we found that sharing to social media was a neat feature some users would enjoy, we also determined it might not be something that every user would use if they just wanted to use the system as a guide/journal).
+From the home screen, the user can access My Collection to view all of the wildflowers they have found and saved. They can touch the image of the wildflower to bring up the wildflower's customizable page in the journal, where the user can add/view additional images that they've taken of the flower. They can also add/view personal notes, or share their find on social media. The user can sort their collection by name or date found, but we chose to make the images more prominent so that the wildflowers are easier for the user to see while scrolling through their collection. We chose to put the "share to social media" option here as a small icon, as opposed to on the "Identified" screen when the flower was first identified. We chose not to include it as one of the main tasks a user could perform from the "Identified" screen (alongside Learn More, Pin to Map, and Add to My Collection) because although we found that sharing to social media was a neat feature many users would enjoy, we also determined it might not be a feature that would be used frequently by all users. It is likely that most users will use the system primarily for its learning and logging features.
 
 ## Heuristic Evaluation Results
 
