--- a/p0.md
+++ b/p0.md
@@ -1,11 +1,15 @@
+
 # P0: Team Contract
 
 Below is a scanned version of our team contract, signed by each team member:
 
-![](http://lorempixel.com/768/1024/ "Page 1")
-![](http://lorempixel.com/768/1024/ "Page 2")
-![](http://lorempixel.com/768/1024/ "Page 3")
-![](http://lorempixel.com/768/1024/ "Page 4")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+
 
 ## Resources
 [Team Contract Handout](http://www.hcitang.org/uploads/Teaching/TeamContract-Handout.docx)
