--- a/p0.md
+++ b/p0.md
@@ -3,12 +3,12 @@
 
 Below is a scanned version of our team contract, signed by each team member:
 
-![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
-![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
-![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
-![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
-![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
-![](https://kowther.github.io/FieldGuide-481/takephoto.gif "Identify by photo recognition")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-1  "Page 1")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-2  "Page 2")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-3  "Page 3")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-4  "Page 4")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-5  "Page 5")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-6  "Page 6")
 
 
 ## Resources
