--- a/p0.md
+++ b/p0.md
@@ -1,14 +1,14 @@
-
+.jpg
 # P0: Team Contract
 
 Below is a scanned version of our team contract, signed by each team member:
 
-![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-1  "Page 1")
-![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-2  "Page 2")
-![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-3  "Page 3")
-![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-4  "Page 4")
-![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-5  "Page 5")
-![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-6  "Page 6")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-1.jpg  "Page 1")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-2.jpg  "Page 2")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-3.jpg  "Page 3")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-4.jpg  "Page 4")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-5.jpg  "Page 5")
+![](https://kowther.github.io/FieldGuide-481/TeamContractRevised-6.jpg  "Page 6")
 
 
 ## Resources
