Added recommendations for next iteration of design

--- a/p4.md
+++ b/p4.md
@@ -26,7 +26,14 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor
 
 ## Recommendations for Next Iteration of Design
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
+Our recommendations for the next iteration of the design would include an implementation of the map feature that we have the buttons set up for in the system. This would include having a map in which users could post their current location and sighting so that other users can see where they found the wildflower and find it there for themselves if they would like. The map would also have the sightings of other users so that the user can use the map to discover other wildflowers when they are in those areas kind of like a treasure hunt as users stated they would like to have this feature. 
+
+Another feature we would recommend implementing in the next iteration of the design is the browse collection feature of the system. This would allow the users to browse a database of wildflowers to discover new ones, learn about them and then go and find them in the field. This database would be set up like the results page that is currently implemented but with other filters that would allow the user to search the database by name or characteristics.
+
+A third feature we would recommend implementing in the next iteration of the design is the settings button on the front page. This would include setting up and editing a profile for the user and the information associated with that profile can be used when pinning sightings for other users to see. In the setting the user can also set their status to anonymous if they do not want to share their name.
+
+The next iteration of the design should also implement the fixes we identified for issues we discovered in the heuristic evaluations that were completed. 
+
 
 ## Conclusions
 
