--- a/p4.md
+++ b/p4.md
@@ -22,7 +22,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor
 
 ## Heuristic Evaluation and Findings
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
+In our heuristic evaluations we discovered numerous issues of varying severity. The issues were grouped based on the severity we assigned to them and we noticed that there was a pattern that evolved when we went over the results of the severity ratings. We noticed that the level 4 ratings were correlated with the heuristic user control and feedback and dealt with the user not being able to exit out of the state they are in if they no longer wished to be there or made a mistake. The fix for these issues included creating back buttons so that the user could access the previous state and make any adjustments or pick a different option.
+
+Our level 3 and level 2 ratings were correlated with the heuristics match between system and the real world and visibility of system status and dealt with the user not being able to understand clearly how the functionality of the system works. We discovered though that the user would be more impacted by the level 3 issues than the level 2 issues. Therefore, the level 3 issues should be fixed before the level 2 issues. Fixes for the level 3 issues included adding more buttons for functionality, more images for identifying and making scrolling clear to the user. Fixes for level 2 issues included making the functionality clearer to the user through better placement and more real world representation. 
+
+Our level 1 issues were correlated with the heuristics consistency and standards and recognition rather than recall and dealt with minor issues such as having the settings button on the right side of the screen and having icons that were a little bit more informative as to their purpose. While these issues are still important, the user can still use the system and understand what to do without any fixes. 
 
 ## Recommendations for Next Iteration of Design
 
