Added executing summary

--- a/p4.md
+++ b/p4.md
@@ -2,7 +2,14 @@
 
 ## Executive Summary
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
+Alberta is home to over 100 native and exotic wildflowers. We have developed an app prototype that allows people of all ages to discover and learn about these beautiful plants. The app is designed to be easy to use for passionate beginners while also having the detailed plant descriptions and large database that advanced amateurs desire. Its modern sleek look elevates the user experience and its simple design requires virtually no time spent in learning how to use it. 
+
+We conducted three complementary investigations to better understand our target users. Reviewing currently available apps in a secondary research helped us to gather a significant volume of user experiences giving us great insight on specific user needs. We interviewed plant enthusiasts with the specific goal of finding out what tools they use to find information, and what they like or dislike about the resources that currently exist. Finally, we went out into the field with participants and had them test out a similar system to determine what worked, what didn’t work, and what they would like to see in a better app. 
+
+From our findings, we produced the must have features for the app. After several cycles of sketching, storyboarding and prototyping we designed our final prototype. The stand out features of our app include uncluttered plant description pages that invites rather than deters users, two types of identification techniques, automatic one-click photo recognition and a manual plant characteristic selection, and a user log. The user log, in particular, is a feature we determined from our research to be desired but that has not been done before in this type of app.
+
+We carried out a heuristic evaluation to uncover the problem areas we missed during our prototyping phase. Most of the major issues revolved around quick fixes in visibility of system status. We feel that our final prototype has a simple easy to use design while giving users plenty of options and maximizing learning. 
+
 
 ## Introduction
 
