--- a/p4.md
+++ b/p4.md
@@ -36,8 +36,6 @@ Our final design was developed keeping in mind the data we collected from the in
 
 For the description pages, we chose to use headers for each section with the information hidden in drop-down sections, as opposed to having all of it displayed by default. This gives the user control over how much or how little information they want to access. A few key pieces of information, such as plant toxicity and species names are always visible on the screen. The two identification techniques give the user choice. The photo recognition identification technique is quick and easy to use, with just one click of a button. We modeled the camera screen after existing smartphone camera screens for familiarity. Identifying by manually choosing characteristics is another technique the user can use if the photo recognition does not give them results. We chose to display the selectable filters as images with the small text underneath to make the characteristic easier to recognize. The user log, My Collection, is a feature that separates this app from those currently on the market. It allows users to save their wildflower sightings. This feature makes the app personalizable where users can add/view additional images that they've taken of the flower. They can also add/view personal notes, or share their find on social media.
 
-We feel that our final prototype has a simple easy to use design while giving users several options and maximizing information and learning. 
-
 
 ## Heuristic Evaluation and Findings
 
@@ -59,5 +57,5 @@ The next iteration of the design should also implement the fixes we identified f
 
 
 ## Conclusions
+BLAH BLAH . We feel that our final prototype has a simple easy to use design while giving users several options and, most importantly, maximizing learning. __NEEDS TO BE COMPLETED__
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
