--- a/p4.md
+++ b/p4.md
@@ -57,5 +57,6 @@ The next iteration of the design should also implement the fixes we identified f
 
 
 ## Conclusions
-BLAH BLAH . We feel that our final prototype has a simple easy to use design while giving users several options and, most importantly, maximizing learning. __NEEDS TO BE COMPLETED__
+
+Alberta Wildflowers is an easy to use app that anyone interested in learning about the many wildflowers found in Alberta would love. Its sleek and easy to use design as well as its use of automatic photo recognition, and user log that allows photo storage and sharing sets it apart from the rest. Our user-centered design process ensures that that this app will do great on the market as we were able to tap into our users most wanted features and deliver a great design.  
 
