Added user research methods and justification

--- a/p4.md
+++ b/p4.md
@@ -28,7 +28,14 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor
 
 ## User Research and Findings
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
+We conducted Secondary Research by reading customer reviews for existing wildflower identification applications. We chose this method because we wanted to use data that already exists to learn from the successes and mistakes of other similar systems. This allowed us to examine several diverse user perspectives in a short period of time. One of our main findings was that a lot of incorrect search results were due to unclear controls that made moving through the system tedious. Upon correct identification, users varied widely in the types/amount of information that they wanted to learn about a flower. Some users wanted short and simple information about a flower, such as its name and interesting facts, while other users wanted rich, in-depth descriptions. The importance of including several high-quality images was prevalent throughout the reviews. Applications that did this were highly praised for it. For applications that did not do this, there were negative reviews on the basis that the system did not contain images, contained few images, or contained low-quality images.
+
+Next, we chose Interview as our next research method. We chose this method because we needed to understand how wildflowers are identified, as well as what works and doesn’t work with existing resources. We interviewed a couple in their twenties who are passionate about plants and skilled in wildflower identification. We learned that wildflowers are generally identified by examining the colour of the petals, and the shapes of the petals and leaves. During identification, images that are large, coloured, and detailed (close-up) are the best resource for comparing these aspects of a flower. One major finding from the interview was that traditional hard copy guides vary widely in how the plants are organized. In some guides, the flowers are in alphabetical order, and in other they are separated into categories. This can make the identification process more confusing and time consuming for someone with no experience in identification or prior knowledge of plants. Similarly, the interviewees stressed the importance of accessible language, because a lot of traditional hard copy guides are written by experts on the subject, who might use language that is too complex or a novice to understand. If someone were to use Google to identify a plant, they would likely struggle with what words to use in a search because they don’t know what they’re supposed to be looking for, and even if they are told what to look for they might still struggle with coming up with the words to describe what they see.
+
+Our last research method was Extreme User Interviews. While our Secondary Research helped us gain an understanding of user preferences *after* system use, we also wanted to gain an understanding of how the user is feeling *during* their use of the system. We also wanted to see first-hand how the user interacts with the system as well as with the environment in which they are using it. We downloaded existing field guide mobile applications, and had people at Fish Creek Provincial Park use them to identify wildflowers. We were able to interact with the users during their use of the system as well as reflect with them afterwards. We found that images were the most helpful in determining likeness. Users were also overwhelmed by screens that were cluttered (e.g. when there was a lot of information displayed on a single screen or when the system was asking the user to do too many things in a single screen). There was also a lot of confusion about what to do in terms of tapping vs. swiping, and what on the screen was selectable/touchable and what was not. This made navigation and decision-making tedious and slowed down the identification process. Some features our interviewees would have liked to see include saving their own photos, learning about edibility or toxicity, and sharing their findings with others.
+
+The common themes among our findings from all methods are the liberal use of high-quality images, accessibility of language, and clarity of controls/ease of use.
+
 
 ## Design and Justification
 
